--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,18 @@
 .card-img-top {
     object-fit: cover;
 }
+
+.navbar-nav a {
+    padding-right: 5%;
+}
+
+
+#leftContent {
+    float: left;
+}
+
+#rightContent {
+    float: right;
+}
+
+
