Changes to dashboard and additional styling

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,3 +1,20 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600&display=swap');
+
+body {
+    background-image: url("./imgs/backgroundImg.png");
+}
+
+#mainPage {
+    height: 80vh;
+    justify-content: center;
+}
+
+.navbar {
+    background-color: #57B894;
+}
+
+
+
 .card-img-top {
     object-fit: cover;
 }
@@ -6,13 +23,42 @@
     padding-right: 5%;
 }
 
+.card {
+    background-color: #efefef;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.5);
+    border-color: #57B894;
+    border-width: 3px;
+    border-radius: 30px;
+}
 
 #leftContent {
     float: left;
+    width: 50%;
+    height: 60vh;
+    justify-content: center;
 }
 
 #rightContent {
     float: right;
+    width: 50%;
+    max-height: 80vh;
+    justify-content: center;
 }
 
+@media only screen and (max-width: 800px) {
 
+    #leftContent {
+        float: none;
+        width: 100%;
+        height: auto;
+        position: relative;
+        display: block;
+    }
+
+    #rightContent {
+        float: none;
+        width: 100%;
+        height: auto;
+        position: relative;
+    }
+}
