Changes to user flow, fixed links and renamed files for better clarity

--- a/mealPlanner.css
+++ b/mealPlanner.css
@@ -2,6 +2,10 @@ body {
     font-family: Arial, sans-serif;
 }
 
+.navbar {
+    background-color: #57B894;
+}
+
 .card {
     width: auto;
     max-width: 350px;
