--- a/mealPlanner.css
+++ b/mealPlanner.css
@@ -65,3 +65,27 @@ body {
     color: white;
     font-weight: bold;
 }
+
+  .container {
+    margin-top: 20px;
+  }
+
+  .day-card {
+   
+    padding: 10px;
+    margin-bottom: 20px;
+    width: 630px;
+    margin: 20px auto;
+    border: 1px solid #ddd;
+    border-radius: 9px;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+    height: 130px;
+    display: flex; 
+  }
+  .meal {
+    margin-bottom: 10px;
+    margin-right: 40px;
+    margin-left:40px;
+   color: #4EA685;
+   font-size: larger;
+}
